# Ping-Pong-Game

./: CMakeLists.txt  main.cpp  run.sh
.cache/clangd/index/: ai_paddle.cpp.AF9A7C00D47FAC49.idx  ai_paddle.h.0345E16D9C49D80B.idx  ball.cpp.C7F3C26F8850279D.idx  ball.h.A9E874C799CDB813.idx  main.cpp.4F38481DF8B2C693.idx  paddle.cpp.64FCAD388546C33A.idx  paddle.h.ABD4905C199688B5.idx
src/body/: ai_paddle.cpp  ball.cpp  body.cpp  paddle.cpp
src/headers/: ai_paddle.h  ball.h  paddle.h
